--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,7 @@
 }
 
 body {
+  min-width: 1160px;
   margin: 0;
   padding: 0;
   font-family: 'Roboto', Arial, Helvetica, sans-serif;
@@ -45,8 +46,9 @@ body {
   line-height: 24px;
   font-weight: normal;
   color: var(--basic-black);
-  box-sizing: border-box;
+  background-color: var(--basic-white);
 }
+
 
 img {
   max-width: 100%;
@@ -55,28 +57,23 @@ img {
 
 .container {
   width: 1160px;
-  max-width: 1200px;
   padding: 0px;
   margin: 0px auto;
+  box-sizing: border-box;
+
 }
 
-.page-body {
-  display: grid;
-}
 /*Хедер навигационные кнопки*/
 
 .main-header {
-  width: 100%;
-  background-color: var(--basic-grey1);
-}
-
-.main-navigation {
-  padding-bottom: 0px;
   background-color: var(--basic-grey1);
 }
 
 .main-navigation {
   display: flex;
+  padding-bottom: 0px;
+  background-color: var(--basic-grey1);
+
 }
 
 .main-header-logo {
@@ -96,7 +93,6 @@ img {
  .site-navigation {
    padding: 0;
    padding-left: 202px;
-   padding-top: 75px;
  }
 
 .site-navigation,
@@ -109,6 +105,7 @@ img {
   display: flex;
   flex-wrap: wrap;
   margin: 0px;
+  margin-top: 75px;
 }
 
 .nav-item a,
@@ -121,7 +118,7 @@ img {
 }
 
 .nav-item2 {
-  padding-right: 3px;
+  padding-right: 5px;
 }
 
 .nav-basket {
@@ -165,7 +162,7 @@ img {
 
 .major-heading {
   position: relative;
-  background-color: var(--basic-grey1);
+  text-align: center;
   font-weight: 500;
   font-size: 55px;
   line-height: 55px;
@@ -177,8 +174,8 @@ img {
   margin: 0px;
   padding-top: 72px;
   padding-bottom: 108px;
-  padding-left: 400px;
   margin-bottom: 55px;
+  background-color: var(--basic-grey1);
 }
 
 /*Главная страница.*/
@@ -186,6 +183,7 @@ img {
 
 .slider {
   background-color: var(--basic-grey1);
+
 }
 
 .slider-item {
@@ -194,6 +192,7 @@ img {
   padding: 70px 0px;
   display:none;
   box-sizing: border-box;
+  background-color: var(--basic-grey1);
 }
 
 .slider-item-active {
@@ -253,8 +252,21 @@ margin-top: 1px;
   color: rgba(255, 255, 255, .3);
 }
 
-/*Услуги*/
 
+/*Grid*/
+
+.index-gris {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr ;
+  align-content: start;
+  gap: 100px;
+  outline: 5px solid rgba(255, 0, 0, 0.7);
+  outline-offset: -5px;
+}
+
+
+/*Услуги*/
 .services {
  color: var(--basic-grey8);
  vertical-align: bottom;
@@ -274,12 +286,32 @@ margin-top: 1px;
 }
 
 .services-list {
+  display: grid;
  list-style-type: none;
  margin: 0px;
  padding: 0px;
- display: flex;
 }
 
+.services-grid1 {
+  outline: 5px solid rgba(255, 0, 0, 0.7);
+  outline-offset: -5px;
+}
+
+.services-grid2 {
+  grid-column: 2/3;
+  grid-row: 1/2;
+  outline: 5px solid rgba(0, 255, 0, 0.7);
+  outline-offset: -5px;
+
+}
+
+.services-grid3 {
+  grid-column: 3/4;
+  grid-row: 1/2;
+  outline: 5px solid rgba(0, 0, 255, 0.7);
+  outline-offset: -5px;
+
+}
 .services-item {
   width: 300px;
   margin-right: 100px;
@@ -357,20 +389,37 @@ margin-top: 1px;
 }
 
 /*Особенности*/
+.partners::before {
+  content: "";
+  display: block;
+  height: 2px;
+  background-color: var(--basic-grey1);
+  margin-top: 53px;
+  margin-bottom: 63px;
+}
 
 .features {
-  display: flex;
+  display: grid;
 }
 
 .features1 {
   width: 651px;
   padding-right: 153px;
   margin-top: 73px;
+  grid-row: 2/3;
+  grid-column: 1/3;
+  outline: 5px solid rgba(190, 16, 138, 0.774);
+  outline-offset: -5px;
 }
+
 
 .features2{
   width: 360px;
   margin-top: 39px;
+  outline: 5px solid rgba(38, 9, 199, 0.774);
+  outline-offset: -5px;
+  grid-column: 3/4;
+  grid-row: 2/3;
 }
 
 .features2 img {
@@ -487,7 +536,6 @@ margin-top: 1px;
 
 .logo {
   opacity: 0.2;
-  padding-top: 55px;
   padding-right: 48px;
   padding-bottom: 8px;
   padding-left: 32px;
@@ -560,8 +608,7 @@ margin-top: 1px;
 .map {
   position: relative;
   width: 100%;
-  height: 416px;
-}
+  }
 
 
 .map img {
@@ -651,6 +698,7 @@ margin-top: 1px;
 .appointment {
   position: fixed;
 }
+
 
 .feedback-title {
   font-style: normal;
@@ -835,15 +883,6 @@ margin-top: 1px;
 
 /* Каталог */
 
-.catalog .container {
-  display: grid;
-  grid-template-rows: 358px 358px 358px;
-  grid-template-rows: 114px 221px 620px 620px 620px 416px 231px;
-  gap: 40px;
-}
-
-
-}
 .table1 {
   padding-right: 140px;
   width: 260px;
@@ -959,49 +998,10 @@ margin-top: 1px;
   color: var(--basic-black);
 }
 
+
+
 /* гриды*/
 
-.page-body {
 
-  width: 1440px;
-  margin-left: auto;
-  margin-right: auto;
 
-  grid-template-columns: 300px 300px 300px;
-  grid-template-rows: 114px 431px 347px 525px 184px auto 217px;
-}
 
-.main-header {
-  grid-column: 1/-1;
-  grid-row: 1/2;
-}
-
-.slider {
-  grid-column: 1/-1;
-  grid-row: 2/3;
-}
-
-.container {
-  grid-column: 1/-1;
-  grid-row: 3/4;
-}
-
-.main-footer {
-  grid-column: 1/-1;
-  grid-row: 8/9;
-}
-
-.major-heading {
-  grid-column: 1/-1;
-  grid-row: 2/3;
-}
-
-.table {
-  grid-column: 1/2;
-  grid-row: 3/4;
-}
-
-.filter2 {
-  grid-column: 2/3;
-  grid-row: 3/4;
-}
